# structifact

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: customers.csv  customers.yml  types.yml
output/: customers.sql  customers.yml
structifact/: __main__.py  cli.py  ir.py  parser.py  types.py  utils.py  validation.py
structifact/adapters/: csv.py  excel.py  registry.py  yaml.py
structifact/generators/: base.py  dbt_yaml.py  registry.py  sql.py
tests/: test_artifact_contracts.py  test_csv_adapter.py  test_generators.py  test_ir.py  test_types.py  test_validation.py  test_yaml_adapter.py
tests/fixtures/: bad.yml  customers.yml
tests/golden/: customers.sql  customers.yml
